Stop Domain admin page jitter due to scrollbar visibility changes

--- a/tests/fixtures/domain/#static/index.css
+++ b/tests/fixtures/domain/#static/index.css
@@ -2,6 +2,11 @@
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html {
+  /* Stop page jumping around as scrollbar appears/disappears. */
+  overflow-y: scroll;
+}
+
 h1 {
   font-size: 3em;
 }
